--- a/REST/docker-compose.yml
+++ b/REST/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   db:
-    image: postges
+    image: postgres
     restart: always
     environment:
       - POSTGRES_DB= test_db
