--- a/REST/microservices/config/gateway.config.yml
+++ b/REST/microservices/config/gateway.config.yml
@@ -6,10 +6,20 @@ admin:
 apiEndpoints:
   api:
     host: localhost
-    paths: '/ip'
+    paths: "/ip"
+  user:
+    host: localhost
+    paths: ["/user", "/users", "/users/*"]
+  music:
+    host: localhost
+    paths: ["/music", "/musics", "/musics/*"]
 serviceEndpoints:
   httpbin:
-    url: 'https://httpbin.org'
+    url: "https://httpbin.org"
+  userService:
+    url: "http://localhost:3000"
+  musicService:
+    url: "http://localhost:8000"
 policies:
   - basic-auth
   - cors
@@ -24,9 +34,29 @@ pipelines:
     apiEndpoints:
       - api
     policies:
-    # Uncomment `key-auth:` when instructed to in the Getting Started guide.
-    # - key-auth:
+      # Uncomment `key-auth:` when instructed to in the Getting Started guide.
+      # - key-auth:
       - proxy:
           - action:
-              serviceEndpoint: httpbin 
+              serviceEndpoint: httpbin
+              changeOrigin: true
+  userPipeline:
+    apiEndpoints:
+      - user
+    policies:
+      # Uncomment `key-auth:` when instructed to in the Getting Started guide.
+      # - key-auth:
+      - proxy:
+          - action:
+              serviceEndpoint: userService
+              changeOrigin: true
+  musicPipeline:
+    apiEndpoints:
+      - music
+    policies:
+      # Uncomment `key-auth:` when instructed to in the Getting Started guide.
+      # - key-auth:
+      - proxy:
+          - action:
+              serviceEndpoint: musicService
               changeOrigin: true
