--- a/REST/microservices/package.json
+++ b/REST/microservices/package.json
@@ -5,7 +5,16 @@
   "license": "UNLICENSED",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "start": "babel-node server.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
     "express-gateway": "^1.16.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/node": "^7.20.5",
+    "@babel/preset-env": "^7.20.2"
   }
 }
