--- a/REST/docker-compose.yml
+++ b/REST/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3.8"
 
 networks:
   microservices:
-    driver: bridge
   big_web:
 
 services:
@@ -15,15 +14,17 @@ services:
       - "8443:8443"
     environment:
       - LOG_LEVEL=debug
-    links:
-      - actor
+    networks:
+      - microservices
 
-  actor:
+  api-actor:
     build: ./services/Actor
-    container_name: actor
+    container_name: api-actor
     command: "node index.js"
     ports:
       - "3000:3000"
+    networks:
+      - microservices
 #   db:
 #     image: postgres
 #     restart: always
