--- a/REST/services/Actor/package.json
+++ b/REST/services/Actor/package.json
@@ -9,6 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@mikro-orm/core": "^5.6.0",
+    "@mikro-orm/postgresql": "^5.6.0",
+    "express": "^4.18.2",
+    "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "@mikro-orm/cli": "^5.6.0",
+    "@mikro-orm/seeder": "^5.6.0"
   }
 }
