fix database connections

--- a/GraphQl/services/author/Dockerfile
+++ b/GraphQl/services/author/Dockerfile
@@ -3,7 +3,7 @@ FROM node:latest
 EXPOSE 4001
 
 RUN mkdir authors
-COPY index.js package.json package-lock.json /authors/
+COPY index.js mydatabase.js package.json package-lock.json /authors/
 WORKDIR /authors
 RUN npm ci
 
