--- a/GraphQl/docker-compose.yml
+++ b/GraphQl/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - LOG_LEVEL=debug
     networks:
       - microservices
+    depends_on:
+      - api-author
 
   api-author:
     build: ./services/author
