--- a/GraphQl/services/author/package.json
+++ b/GraphQl/services/author/package.json
@@ -12,6 +12,8 @@
     "@apollo/server": "^4.2.2",
     "@apollo/subgraph": "^2.2.2",
     "datasource-sql": "^2.0.1",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "pg": "^8.8.0"
   }
 }
