add resolver for an single author and all authors #4

--- a/GraphQl/docker-compose.yml
+++ b/GraphQl/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     command: "node index.js"
     ports:
       - "4001:4001"
+    environment:
+      - LOG_LEVEL=debug
     networks:
       - microservices
       - author-net
