--- a/REST/services/Author/package.json
+++ b/REST/services/Author/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@mikro-orm/core": "^5.6.0",
     "@mikro-orm/postgresql": "^5.6.0",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "knex": "^2.3.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
