add book routes

--- a/REST/gateway/Config/gateway.config.yml
+++ b/REST/gateway/Config/gateway.config.yml
@@ -16,6 +16,8 @@ apiEndpoints:
     paths:
       - "/books"
       - "/books/*"
+      - "/book"
+      - "/book/*"
 serviceEndpoints:
   httpbin:
     url: "https://httpbin.org"
