--- a/REST/services/Book/package.json
+++ b/REST/services/Book/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie",
+  "name": "book",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "knex": "^2.3.0",
+    "pg": "^8.8.0"
   }
 }
