--- a/GraphQl/docker-compose.yml
+++ b/GraphQl/docker-compose.yml
@@ -51,6 +51,14 @@ services:
   api-author-db:
     image: postgres
     restart: always
+    command:
+      - "postgres"
+      - "-c"
+      - "max_connections=1200"
+      - "-c"
+      - "idle_session_timeout=10000"
+      - "-c"
+      - "idle_in_transaction_session_timeout=10000"
     environment:
       POSTGRES_DB: author_db
       POSTGRES_USER: postgres
@@ -59,17 +67,25 @@ services:
       options:
         max-size: 10m
         max-file: "3"
-    ports: 
+    ports:
       - "5432:5432"
     volumes:
       - graphql-author-db-data:/var/lib/postgresql/data
-      - './services/author/init.sql:/docker-entrypoint-initdb.d/init.sql'
+      - "./services/author/init.sql:/docker-entrypoint-initdb.d/init.sql"
     networks:
       - author-net
-  
+
   api-book-db:
     image: postgres
     restart: always
+    command:
+      - "postgres"
+      - "-c"
+      - "max_connections=1200"
+      - "-c"
+      - "idle_session_timeout=10000"
+      - "-c"
+      - "idle_in_transaction_session_timeout=10000"
     environment:
       POSTGRES_DB: book_db
       POSTGRES_USER: postgres
@@ -78,11 +94,11 @@ services:
       options:
         max-size: 10m
         max-file: "3"
-    ports: 
-      - "5433:5433"
+    ports:
+      - "5433:5432"
     volumes:
       - graphql-book-db-data:/var/lib/postgresql/data
-      - './services/book/init.sql:/docker-entrypoint-initdb.d/init.sql'
+      - "./services/book/init.sql:/docker-entrypoint-initdb.d/init.sql"
     networks:
       - book-net
 
