--- a/REST/docker-compose.yml
+++ b/REST/docker-compose.yml
@@ -48,6 +48,14 @@ services:
   api-author-db:
     image: postgres
     restart: always
+    command:
+      - "postgres"
+      - "-c"
+      - "max_connections=1200"
+      - "-c"
+      - "idle_session_timeout=10000"
+      - "-c"
+      - "idle_in_transaction_session_timeout=10000"
     environment:
       POSTGRES_DB: author_db
       POSTGRES_USER: postgres
@@ -67,6 +75,14 @@ services:
   api-book-db:
     image: postgres
     restart: always
+    command:
+      - "postgres"
+      - "-c"
+      - "max_connections=1200"
+      - "-c"
+      - "idle_session_timeout=10000"
+      - "-c"
+      - "idle_in_transaction_session_timeout=10000"
     environment:
       POSTGRES_DB: book_db
       POSTGRES_USER: postgres
